Click Changelog
===============

This contains all major version changes between Click releases.

Version 6.7
-----------

(bugfix release; yet to be released)

- Make `click.progressbar` work with `codecs.open` files. See #637.
- Fix bug in bash completion with nested subcommands. See #639.
- Fix test runner not saving caller env correctly. See #644.
- Fix handling of SIGPIPE. See #626

Version 6.6
-----------

(bugfix release; released on April 4th 2016)

- Fix bug in `click.Path` where it would crash when passed a `-`. See #551.

Version 6.4
-----------

(bugfix release; released on March 24th 2016)

- Fix bug in bash completion where click would discard one or more trailing
  arguments. See #471.

Version 6.3
-----------

(bugfix release; released on February 22 2016)

- Fix argument checks for interpreter invoke with `-m` and `-c`
  on Windows.
- Fixed a bug that cased locale detection to error out on Python 3.


Version 6.2
-----------

(bugfix release, released on November 27th 2015)

- Correct fix for hidden progress bars.

Version 6.1
-----------

(bugfix release, released on November 27th 2015)

- Resolved an issue with invisible progress bars no longer rendering.
- Disable chain commands with subcommands as they were inherently broken.
- Fix `MissingParameter` not working without parameters passed.

Version 6.0
-----------

(codename "pow pow", released on November 24th 2015)

- Optimized the progressbar rendering to not render when it did not
  actually change.
- Explicitly disallow nargs=-1 with a set default.
- The context is now closed before it's popped from the stack.
- Added support for short aliases for the false flag on toggles.
- Click will now attempt to aid you with debugging locale errors
  better by listing with the help of the OS what locales are
  available.
- Click used to return byte strings on Python 2 in some unit-testing
  situations.  This has been fixed to correctly return unicode strings
  now.